# tycho-arbitrage

./: .env.example  .gitignore  Cargo.toml  README.md
examples/arbitrage-bot/: README.md  cli.rs  main.rs  stream.rs
examples/arbitrage-bot/context/: arbitrage.rs  balance.rs  components.rs  logging.rs  mod.rs  optimization.rs  optimizers.rs  simulation.rs
src/: config.rs  lib.rs  utils.rs
src/builders/: bundle.rs  graph.rs  mod.rs  simulator.rs
src/bundle/: mod.rs  relay.rs
src/errors/: bundle.rs  graph.rs  mod.rs  path.rs  simulation.rs  utility.rs
src/graph/: core.rs  mod.rs  types.rs
src/path/: creation.rs  execution.rs  mod.rs  optimization.rs  repository.rs  swap.rs
src/simulation/: encoding.rs  mod.rs  parsing.rs
