[package]
name = "tycho-atomic-arbitrage"
version = "0.1.0"
edition = "2021"
description = "A Rust project for atomic arbitrage detection and execution using the Tycho platform."

[[example]]
name = "arbitrage-bot"
path = "examples/arbitrage-bot/main.rs"
required-features = []

[dependencies]
# Tycho Core Dependencies
tycho-common = "0.70.9"
# tycho-client is re-exported by tycho-simulation
tycho-execution = "0.97.0"
tycho-simulation = { git = "https://github.com/propeller-heads/tycho-simulation.git", branch = "main" }

# EVM Interaction & Data Types (Alloy)
alloy-sol-types = "0.8.25"
alloy = { version = "1.0.6", features = ["providers", "signer-local", "rpc-types-eth", "sol-types", "consensus", "rlp", "eips"] }
alloy-transport-http = "0.1.0"

# HTTP Client
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async Runtime
tokio = { version = "1.38.0", features = ["full"] }
futures = "0.3"

# Serialization/Deserialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0.105"

# Error Handling
thiserror = "1.0"
anyhow = "1.0.79"

# CLI Parsing
clap = { version = "4.5.3", features = ["derive", "env"] }

# Graph Operations
petgraph = "0.6"

# Numerics
num-bigint = { version = "0.4", features = ["serde"] }
num-traits = "0.2.19"

# Logging & Tracing
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "fmt"] }

# Utilities
hex = "0.4.3"
chrono = { version = "0.4.26", features = ["serde"] }
itertools = "0.10.5"
uuid = { version = "1.4.1", features = ["serde", "v4", "fast-rng", "macro-diagnostics"] }
dotenvy = "0.15"
url = "2.4"
csv = "1.3"

# Parallel Processing
rayon = "1.10.0"

[dev-dependencies]
tempfile = "3.8"

# Production optimizations
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# Faster builds for development
[profile.dev.package."*"]
opt-level = 3
